syntax = "proto3";

option csharp_namespace = "Saapp.AndroidAPI.Endpoints.GRPC.Global.Version.Protos";
option java_multiple_files = true;
option java_package = "com.saphamrah.protos";
option java_outer_classname = "VersionProto";
option objc_class_prefix = "HLW";

package Global;

service Version{
	rpc GetVersion(VersionRequest) returns(VersionReply);
}

message VersionRequest{
}

message VersionReply{ 
         string Content = 1;
}

